fixing spacing

--- a/css/mission.css
+++ b/css/mission.css
@@ -456,7 +456,7 @@ li:last-child {
 }
 
 .subtitle {
-  max-width: 666px;
+  max-width: 680px;
   margin: 2px auto 0;
   padding-left: 6%;
   padding-right: 6%;
